# openai-chatGPT-webclient

./: .gitignore  Dockerfile  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml  docker-image.yaml
src/: app_streamlit.py  chat_gpt.py
tests/: test_chat_gpt.py
