[metadata]
name = openai_chatgpt_webclient
version = 0.0.1
description = A web based chat to interact with chatGPT deployed in Azure Open AI
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Andreas Botsikas
maintainer_email = andreasbotsikas@users.noreply.github.com
license = Apache-2.0
license_file = LICENSE
platforms = any
classifiers =
    Environment :: Web
    License :: OSI Approved :: Apache 2.0 License
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
home_page = https://github.com/dodekanisou/openai-chatGPT-webclient
keywords =
    chatGPT
    azure
    streamlit
readme = README.md
repository = https://github.com/dodekanisou/openai-chatGPT-webclient

[options]
packages = find:
install_requires =
    openai
    streamlit
    streamlit-chat
python_requires = >=3.7
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
dev =
    black
    flake8
    pytest
    pytest-env
    setup-cfg-fmt
    setuptools-scm

[flake8]
max-line-length = 120
max-complexity = 10
ignore =
    E203
    W503

[tool:pytest]
testpaths = tests
